# harpocrates

./: .clang-format  CMakeLists.txt  README.md  waf  wscript
include/harpocrates/: harpocrates.hpp  hashing.hpp
measurements/: CMakeLists.txt
src/harpocrates/: harpocrates.cpp  hashing.cpp
test/: CMakeLists.txt
test/test_encrypt_decrypt/: CMakeLists.txt  wscript
test/test_hashing/: CMakeLists.txt  test_hashing.cpp
